<resources>
    <string name="loading_tips">请稍后...</string>
    <string name="app_name">AndroidTv</string>
    <string name="today_recommand">今日推荐</string>
    <string name="live">直播</string>
    <string name="setup">设置</string>
    <string name="movie">电影</string>
    <string name="title_activity_login">login</string>
    <string name="soft_update_title" > 有新的版本了哦!</string>
    <string name="soft_update_later">下次更新</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="request_permissions">Android6.0以上设备需要申请权限才能提供更好服务</string>
    <string name="request_permissions_toast">进入设置设置开启相关权限</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <!-- Strings related to login -->
    <string name="prompt_email">手机号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_register">注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">密码错误</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="no_sign_in">未登录</string>
</resources>
