<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.fuyifang.androidtv.ui.LoginActivity">

    <ScrollView
        android:background="#77000000"
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                style="@style/MyTextLabel"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:textColor="@color/white"
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_margin="10dp"
                style="@style/MyTextLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

           <LinearLayout
               android:layout_margin="10dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <Button
                   android:layout_weight="1"
                   android:id="@+id/email_sign_in_button"
                   style="?android:textAppearanceSmall"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="16dp"
                   android:text="@string/action_sign_in"
                   android:textStyle="bold" />
               <Button
                   android:layout_marginLeft="10dp"
                   android:layout_weight="1"
                   android:id="@+id/email_register_button"
                   style="?android:textAppearanceSmall"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="16dp"
                   android:text="@string/action_register"
                   android:textStyle="bold" />
           </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
